bidding for a song works

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 
           <p>
             <label for="bid">Bid</label>
-            <input type="number" id="bid" value="min" min="0" />
+            <input type="number" id="bid" />
           </p>
 
           <input type="submit" value="Add Song"/>
