minimum bid set to 0

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
 
           <p>
             <label for="bid">Bid</label>
-            <input type="number" id="bid" />
+            <input type="number" id="bid" min="0" />
           </p>
 
           <input type="submit" value="Add Song"/>
