--- a/public/index.html
+++ b/public/index.html
@@ -45,11 +45,14 @@
     </form>
 
     <h2 id="nowPlaying"></h2>
+
+    <button id="togglePlay">Toggle Play</button>
     
     <ol></ol>
 
   
     <script src="/socket.io/socket.io.js"></script>
+    <script src="https://sdk.scdn.co/spotify-player.js"></script>
     <script src="client/app.js"></script>
   </body>
 </html>
