--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,6 @@
     <ol></ol>
 
   
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="client/app.js"></script>
+    <script src="./bundle.js"></script>
   </body>
 </html>
