show search results

--- a/public/index.html
+++ b/public/index.html
@@ -34,19 +34,14 @@
             <input type="text" id="artist" />
           </p>
 
-          <p>
-            <label for="bid">Bid</label>
-            <input type="number" id="bid" min="0" />
-          </p>
-
-          <input type="submit" value="Add Song"/>
+          <input type="submit" value="Search Songs"/>
 
       </fieldset>
     </form>
 
-    <h2 id="nowPlaying"></h2>
+    <div id="searchResults"></div>
 
-    <button id="togglePlay">Toggle Play</button>
+    <h2 id="nowPlaying"></h2>
     
     <ol></ol>
 
