add audio when new song plays

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       <form id="createRoomForm">
         <label for="roomName">Room Name: </label>
         <input type="text" id="roomName">
-        <input type="submit" id="createRoomSubmit" value="Create Room"/>
+        <input type="submit" id="createRoomSubmit"/>
       </form>
       <h3 id="currentRoom">Current Room Main</h3>
       <ul id="rooms"></ul>
@@ -23,7 +23,7 @@
 
     <form id="addSongForm">
       <fieldset>
-        <legend>Enter Song Info</legend>
+        <legend>Search for Song</legend>
           <p>
             <label for="songName">Song Name</label>
             <input type="text" id="songName" />
@@ -34,7 +34,7 @@
             <input type="text" id="artist" />
           </p>
 
-          <input type="submit" value="Search Songs"/>
+          <input type="submit"/>
 
       </fieldset>
     </form>
@@ -42,6 +42,7 @@
     <div id="searchResults"></div>
 
     <h2 id="nowPlaying"></h2>
+    <div id="nowPlayingAudio"></div>
     
     <ol></ol>
 
