fix audio not playing

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
     <div id="searchResults"></div>
 
     <h2 id="nowPlaying"></h2>
-    <div id="nowPlayingAudio"></div>
+    <div id="currentlyPlayingAudio"></div>
     
     <ol></ol>
 
