add frontend Causes Component

--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,7 @@
     <button id="togglePlay">Toggle Play</button>
     
     <ol></ol>
+    <div id="causes-container"></div>
 
   <script src="./bundle.js"></script>
   </body>
